force-app/main/default/objects/Project__c/fields/Sample_Revert_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Revert_Date__c</fullName>
    <inlineHelpText>By what date customer will revert on sample submitted</inlineHelpText>
    <label>Sample Revert Date</label>
    <type>Date</type>
</CustomField>