force-app/main/default/objects/Project__c/fields/Sample_Size_for_trails__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size_for_trails__c</fullName>
    <label>Sample Size for trails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>