force-app/main/default/objects/Project__c/fields/Sample_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Start_Date__c</fullName>
    <label>Sample Start Date</label>
    <type>Date</type>
</CustomField>