force-app/main/default/objects/Project__c/fields/Sample_Sub_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Sample_Sub_Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sub Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>