force-app/main/default/objects/Project__c/fields/Sample_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>