force-app/main/default/objects/Project__c/fields/Sampling_Quantity_details__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Quantity_details__c</fullName>
    <label>Sampling Quantity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>