force-app/main/default/objects/Project__c/fields/Sampling_Quantity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Quantity_Unit__c</fullName>
    <label>Sampling Quantity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gm</fullName>
            </value>
            <value>
                <fullName>Mg</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>Tonne</fullName>
            </value>
            <value>
                <fullName>Mt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>