force-app/main/default/objects/Project__c/fields/SAP_User_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_User_Code__c</fullName>
    <formula>Owner:User.SAP_USER_CODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP User Code</label>
    <type>Text</type>
</CustomField>