force-app/main/default/objects/Project__c/fields/Scaled_up_date__c.field-meta.xml
<CustomField>
    <fullName>Scaled_up_date__c</fullName>
    <description>INITIAL SAMPLING DATE</description>
    <label>Select a date for Scaled up date</label>
    <type>Date</type>
</CustomField>