force-app/main/default/objects/Project__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>TEXT( Account__r.Account_Segment__c )</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>