force-app/main/default/objects/Project__c/fields/Sensory_profiling_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Sensory_profiling_Report_Required__c</fullName>
    <label>Sensory  profiling Report  Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>