force-app/main/default/objects/Project__c/fields/Sensory_Target_profile_expectation__c.field-meta.xml
<CustomField>
    <fullName>Sensory_Target_profile_expectation__c</fullName>
    <label>Sensory Target profile expectation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>