force-app/main/default/objects/Project__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <label>Ship To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>