force-app/main/default/objects/Project__c/fields/Shipping_Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Pan_Number__c</fullName>
    <formula>IF( Opportunity__r.Account_Shipping_Address__c ,  Opportunity__r.Account.PAN_Number__c ,  Opportunity__r.Customer_Shipping_Address__r.PAN_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Pan Number</label>
    <type>Text</type>
</CustomField>