force-app/main/default/objects/Project__c/fields/Shipping_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Code__c</fullName>
    <formula>IF(Opportunity__r.Account_Shipping_Address__c,  TEXT( Opportunity__r.Account.ShippingStateCode)  ,  TEXT(Opportunity__r.Customer_Shipping_Address__r.Address__StateCode__s ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State Code</label>
    <type>Text</type>
</CustomField>