force-app/main/default/objects/Project__c/fields/Show_BH_Approval__c.field-meta.xml
<CustomField>
    <fullName>Show_BH_Approval__c</fullName>
    <formula>IF(OR( ISPICKVAL(Approval_Status__c, &apos;Rejected By Business Head&apos;), ISPICKVAL(Approval_Status__c, &apos;&apos;) ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show BH Approval</label>
    <type>Checkbox</type>
</CustomField>