force-app/main/default/objects/Project__c/fields/Show_Sample_Cust_Creation_Msg__c.field-meta.xml
<CustomField>
    <fullName>Show_Sample_Cust_Creation_Msg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Sample Cust Creation Msg</label>
    <type>Checkbox</type>
</CustomField>