force-app/main/default/objects/Project__c/fields/Solubility_Preference__c.field-meta.xml
<CustomField>
    <fullName>Solubility_Preference__c</fullName>
    <label>Solubility Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>