force-app/main/default/objects/Project__c/fields/Solublity__c.field-meta.xml
<CustomField>
    <fullName>Solublity__c</fullName>
    <label>Solublity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>