force-app/main/default/objects/Project__c/fields/Specific_inputs_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Specific_inputs_by_customer__c</fullName>
    <label>Specific Inputs by Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>