force-app/main/default/objects/Project__c/fields/Specify_other_reason__c.field-meta.xml
<CustomField>
    <fullName>Specify_other_reason__c</fullName>
    <inlineHelpText>Since chosen as Others for Primary Reason for selecting this product, specify the reason if the option is not listed above</inlineHelpText>
    <label>Specify other reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>