force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>updates based on project start date in Optiva, SAP
this field is updated only if SAP / Optiva updates in the respective systems</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>