force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Sampling</fullName>
            </value>
            <value>
                <fullName>Submitted for Project</fullName>
            </value>
            <value>
                <fullName>Submitted for Application</fullName>
            </value>
            <value>
                <fullName>Submitted for Tech Docs</fullName>
            </value>
            <value>
                <fullName>Approved by R&amp;D</fullName>
            </value>
            <value>
                <fullName>Rejected by R&amp;D</fullName>
            </value>
            <value>
                <fullName>Sample Ready to Dispatch</fullName>
            </value>
            <value>
                <fullName>Project Ready to Dispatch</fullName>
            </value>
            <value>
                <fullName>Application Project Ready</fullName>
            </value>
            <value>
                <fullName>Sample_Dispatched</fullName>
                <label>Sample Dispatched</label>
            </value>
            <value>
                <fullName>Forwarded Sample Detail to Client</fullName>
            </value>
            <value>
                <fullName>Sample Received By Client</fullName>
            </value>
            <value>
                <fullName>Sample Accepted</fullName>
            </value>
            <value>
                <fullName>Sample Rejected</fullName>
            </value>
            <value>
                <fullName>Project Accepted</fullName>
            </value>
            <value>
                <fullName>Project Rejected</fullName>
            </value>
            <value>
                <fullName>Application Accepted</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
            <value>
                <fullName>Need Amendments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>