force-app/main/default/objects/Project__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Shipping Street</label>
    <length>125</length>
    <type>Text</type>
</CustomField>