force-app/main/default/objects/Project__c/fields/Submit_Sample_To_Optiva__c.field-meta.xml
<CustomField>
    <fullName>Submit_Sample_To_Optiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit To Optiva</label>
    <type>Checkbox</type>
</CustomField>