force-app/main/default/objects/Project__c/fields/Submitted_To_SAP_Optiva__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To_SAP_Optiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>