force-app/main/default/objects/Project__c/fields/Sugar__c.field-meta.xml
<CustomField>
    <fullName>Sugar__c</fullName>
    <label>Sugar %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>