force-app/main/default/objects/Project__c/fields/Supplier_COA__c.field-meta.xml
<CustomField>
    <fullName>Supplier_COA__c</fullName>
    <label>Supplier COA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>