force-app/main/default/objects/Project__c/fields/Supplier_Food_Grade_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Food_Grade_Status__c</fullName>
    <label>Supplier Food Grade Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>