force-app/main/default/objects/Project__c/fields/Supplier_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Legal_Status__c</fullName>
    <label>Supplier Legal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>