force-app/main/default/objects/Project__c/fields/Supplier_MSDS__c.field-meta.xml
<CustomField>
    <fullName>Supplier_MSDS__c</fullName>
    <label>Supplier MSDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>