force-app/main/default/objects/Project__c/fields/Supplier_Spec__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Spec__c</fullName>
    <label>Supplier Spec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>