force-app/main/default/objects/Project__c/fields/Target_GM_Improvement_at_FG_levels__c.field-meta.xml
<CustomField>
    <fullName>Target_GM_Improvement_at_FG_levels__c</fullName>
    <label>Target GM% Improvement at FG levels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>