force-app/main/default/objects/Project__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <formula>Opportunity__r.Target_Price_Kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Price/Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>