force-app/main/default/objects/Project__c/fields/Target_Saving_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Saving_Percentage__c</fullName>
    <label>Target Saving Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>