force-app/main/default/objects/Project__c/fields/Tech_Doc_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Doc_Name__c</fullName>
    <label>Tech Doc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>