force-app/main/default/objects/Project__c/fields/Technical_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complexity__c</fullName>
    <label>Technical Complexity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>