force-app/main/default/objects/Project__c/fields/Tested_at_Flavor_Level__c.field-meta.xml
<CustomField>
    <fullName>Tested_at_Flavor_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tested at Flavor Level?</label>
    <type>Checkbox</type>
</CustomField>