force-app/main/default/objects/Project__c/fields/Time_Duration_in_hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Duration_in_hours__c</fullName>
    <label>Time Duration(in hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>