force-app/main/default/objects/Project__c/fields/Total_Project_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Quotient__c</fullName>
    <label>Total Project Quotient</label>
    <summaryForeignKey>Project_Quotient__c.Sample_Project_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>