force-app/main/default/objects/Project__c/fields/Total_Solids__c.field-meta.xml
<CustomField>
    <fullName>Total_Solids__c</fullName>
    <label>Total Solids  %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>