force-app/main/default/objects/Project__c/fields/Type_of_PR__c.field-meta.xml
<CustomField>
    <fullName>Type_of_PR__c</fullName>
    <label>Type of PR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Customer Recipe</fullName>
            </value>
            <value>
                <fullName>Product matching</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Rework Project</fullName>
            </value>
            <value>
                <fullName>NPD</fullName>
                <isActive>false</isActive>
                <label>NPD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>