force-app/main/default/objects/Project__c/fields/Usage_Levels_in_Recipes_Average__c.field-meta.xml
<CustomField>
    <fullName>Usage_Levels_in_Recipes_Average__c</fullName>
    <label>Usage Levels in Recipes(Average)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>