force-app/main/default/objects/Project__c/fields/Wet_Dry__c.field-meta.xml
<CustomField>
    <fullName>Wet_Dry__c</fullName>
    <inlineHelpText>Customer requires Wet / Dry ingredient?</inlineHelpText>
    <label>Wet / Dry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wet</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>