force-app/main/default/objects/Project__c/fields/Where_Used__c.field-meta.xml
<CustomField>
    <fullName>Where_Used__c</fullName>
    <label>Where Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>