force-app/main/default/objects/Project__c/fields/who_requested_the_sample__c.field-meta.xml
<CustomField>
    <fullName>who_requested_the_sample__c</fullName>
    <label>who requested the sample</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer suggested</fullName>
            </value>
            <value>
                <fullName>Sales person recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>