force-app/main/default/objects/Project__c/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <label>Application</label>
</RecordType>