force-app/main/default/objects/Project__c/recordTypes/Tech_Doc.recordType-meta.xml
<RecordType>
    <fullName>Tech_Doc</fullName>
    <active>true</active>
    <label>Tech Doc</label>
</RecordType>