force-app/main/default/objects/Project__c/validationRules/Account_Shipping_Address_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Shipping_Address_NULL</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   RecordType.Name == &apos;Sample&apos;, ISNULL( Customers_Contact__c ), 
   NOT(ISNULL( Account__c )),
   OR( 
       ISNULL(Account__r.ShippingCity), 
       ISNULL(Account__r.ShippingCountry), 
       ISNULL(Account__r.ShippingPostalCode),
       ISNULL(Account__r.ShippingState),
       ISNULL(Account__r.ShippingStreet)
   )
)</errorConditionFormula>
    <errorMessage>The Account attached with the Sample doesn&apos;t have complete Address. Please add all the fields and re-try.</errorMessage>
</ValidationRule>