force-app/main/default/objects/Project__c/validationRules/Check_Required_Field_For_Sample_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Required_Field_For_Sample_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( IF(RecordType.DeveloperName = &quot;Sample&quot;, true, false), OR(  ISPICKVAL(Project_Type__c,&apos;&apos;),ISBLANK(Project_Title__c),ISPICKVAL( Project_Category__c,&apos;&apos;),ISPICKVAL(Opportunity_Type__c,&apos;&apos;),ISPICKVAL(  Opportunity_Sub_Type__c,&apos;&apos;)))</errorConditionFormula>
    <errorMessage>Project Type - Project Title - Project Category - Opportunity Type - Opportunity Sub Type

These fields are required in order to create sample</errorMessage>
</ValidationRule>