force-app/main/default/objects/Project__c/validationRules/If_Annual_Volume_is_not_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Annual_Volume_is_not_NULL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNULL(  Annual_Volume_Full__c ) = FALSE ,
ISPICKVAL(  Annual_Volume_in_units__c , &quot;&quot;) )</errorConditionFormula>
    <errorMessage>Please enter Annual Volume (in units)</errorMessage>
</ValidationRule>