force-app/main/default/objects/Project__c/validationRules/If_Quantity_is_not_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Quantity_is_not_NULL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL(  Minimum_order_quantity__c ) = FALSE ,
    ISPICKVAL(  Minimum_order_quantity_unit__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Minimum_order_quantity_unit__c</errorDisplayField>
    <errorMessage>Please enter Minimum Order Quantity Unit</errorMessage>
</ValidationRule>