force-app/main/default/objects/Project__c/validationRules/If_Sampling_Quantity_is_not_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Sampling_Quantity_is_not_NULL</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( RecordType.DeveloperName = &quot;Sample&quot;),
ISNULL(   Sampling_Quantity_details__c ) = FALSE ,
ISPICKVAL(   Sampling_Quantity_Unit__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Sampling_Quantity_Unit__c</errorDisplayField>
    <errorMessage>Please enter Sampling Quantity Unit</errorMessage>
</ValidationRule>