force-app/main/default/objects/Project__c/validationRules/Lead_And_Account_Both_Cant_tag_on_Sample.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_And_Account_Both_Cant_tag_on_Sample</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Sample&quot;, ISBLANK( Account__c ), ISBLANK(Lead__c ))</errorConditionFormula>
    <errorMessage>Sample cannot be created without Lead or Account. Atleast, one should be tagged to a Sample record.</errorMessage>
</ValidationRule>