force-app/main/default/objects/Project__c/validationRules/Opportunity_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( DATEVALUE(CreatedDate) &gt;= DATE(2023, 11, 15), OR(RecordType.Name == &apos;Project&apos;, RecordType.Name == &apos;Application&apos;), ISBLANK( Opportunity__c ) )</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Opportunity cannot be blank</errorMessage>
</ValidationRule>