force-app/main/default/objects/Project__c/validationRules/Other_Application_Method_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Application_Method_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL ( Application_method__c, &quot;others&quot;),
     ISBLANK(Other_Application_Methods__c) = TRUE )</errorConditionFormula>
    <errorDisplayField>Other_Application_Methods__c</errorDisplayField>
    <errorMessage>Please enter Other Application Method</errorMessage>
</ValidationRule>