force-app/main/default/objects/Project__c/validationRules/Reason_for_selecting_the_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_selecting_the_product</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL (Main_reason_for_selecting_product__c, &quot;Others (Please Specify)&quot;),
     ISBLANK(  Specify_other_reason__c  ) = TRUE )</errorConditionFormula>
    <errorDisplayField>Specify_other_reason__c</errorDisplayField>
    <errorMessage>Capture the reason for choosing others</errorMessage>
</ValidationRule>