force-app/main/default/objects/Project__c/validationRules/Specify_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Rejection_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
   OR( 
      ISPICKVAL(Status__c , &apos;Application Rejected&apos;), 
      ISPICKVAL(Status__c , &apos;Project Rejected&apos;)
      ),
    ISPICKVAL(Reason_for_rejection__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorMessage>Please specify rejection reason</errorMessage>
</ValidationRule>