force-app/main/default/objects/Project__c/validationRules/Type_of_PR_matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_PR_matching</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(), NOT(ISBLANK(  Parent_Project__c )),
( TEXT(Type_of_PR__c) != TEXT(Parent_Project__r.Type_of_PR__c) )
)</errorConditionFormula>
    <errorMessage>Type of PR should be same</errorMessage>
</ValidationRule>