force-app/main/default/objects/Project__c/validationRules/Validation_on_opp_and_lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_opp_and_lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Opportunity__c ) ,ISBLANK( Lead__c ))</errorConditionFormula>
    <errorMessage>Should select either Lead or Opportunity</errorMessage>
</ValidationRule>