force-app/main/default/objects/Project__c/listViews/Application.listView-meta.xml
<ListView>
    <fullName>Application</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Sample_Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Application</value>
    </filters>
    <label>Application</label>
</ListView>