force-app/main/default/objects/Project__c/listViews/Copy_of_Sample_team_List.listView-meta.xml
<ListView>
    <fullName>Copy_of_Sample_team_List</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>Sample_Project__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>City__c</columns>
    <columns>Account__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Sample</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>New,Rejected by R&amp;D,Sample Dispatched,Sample Accepted,Sample Rejected,Project Accepted,Project Rejected,Application Accepted,Application Rejected</value>
    </filters>
    <label>Sample team List</label>
</ListView>