force-app/main/default/objects/Project__c/listViews/Project.listView-meta.xml
<ListView>
    <fullName>Project</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Business_potential_value_INR__c</columns>
    <columns>Annual_Value__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Sample_Submitted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/31/2023 12:00 AM</value>
    </filters>
    <label>Project</label>
</ListView>