force-app/main/default/objects/Project__c/listViews/Sample.listView-meta.xml
<ListView>
    <fullName>Sample</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>Sample_Project__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>City__c</columns>
    <columns>Account__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Sample</value>
    </filters>
    <label>Sample</label>
</ListView>