force-app/main/default/objects/Project__c/listViews/Tech_Docs.listView-meta.xml
<ListView>
    <fullName>Tech_Docs</fullName>
    <columns>NAME</columns>
    <columns>MSDS__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Tech_Doc</value>
    </filters>
    <label>Tech Docs</label>
</ListView>